yamls/istio-demo/mydata-v1.yaml
---
#################################################
# Service: mydata
#################################################
apiVersion: v1
kind: Service
metadata:
  name: mydata
  labels:
    app: mydata
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: mydata
---
#################################################
# Deployment: mydata v1
#################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydata-v1
  labels:
    app: mydata
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydata
      version: v1
  template:
    metadata:
      labels:
        app: mydata
        version: v1
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: index-html
          mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      volumes:
      - name: index-html
        configMap:
          name: mydata-cm-v1
